fix/fixed the z-index of the header

--- a/src/styles/navigation-styles/Header.module.css
+++ b/src/styles/navigation-styles/Header.module.css
@@ -10,6 +10,7 @@
   box-shadow: 0px 10px 30px rgba(234, 106, 18, 0.05);
   padding: 10px 20px;
   max-width: 100%;
+  z-index: 9999;
 }
 .header form {
   border-radius: 25px;
